--- a/3_data_cleaning_metal_bands.ipynb
+++ b/3_data_cleaning_metal_bands.ipynb
@@ -1,31 +1,39 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 56,
-      "id": "3eea1a31-68f6-4ec5-a176-72730422cf50",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "3eea1a31-68f6-4ec5-a176-72730422cf50"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "outputs": [],
       "source": [
-        "import pandas as pd"
+        "<a href=\"https://colab.research.google.com/github/FindWhatYou/Pandas/blob/main/3_data_cleaning_metal_bands.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 57,
-      "id": "4ceb6f9b-84a0-457b-b251-58d8d8bdbf2c",
+      "cell_type": "markdown",
+      "source": [
+        "#Data Cleaning Metal Bands"
+      ],
       "metadata": {
-        "id": "4ceb6f9b-84a0-457b-b251-58d8d8bdbf2c"
+        "id": "8DQhLohWt7Pc"
       },
-      "outputs": [],
+      "id": "8DQhLohWt7Pc"
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# death_metal.csv\n",
         "url = 'https://drive.google.com/file/d/11HsCgxJL_PtJ8xxdT5VZbw6e0y0-VKag/view?usp=sharing' \n",
         "path = 'https://drive.google.com/uc?export=download&id='+url.split('/')[-2]\n",
         "bands = pd.read_csv(path)"
-      ]
+      ],
+      "metadata": {
+        "id": "CrbDj-hot8zS"
+      },
+      "id": "CrbDj-hot8zS",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2230,7 +2238,8 @@
       "version": "3.9.7"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
