--- a/2_pandas_str_bonus_challenges.ipynb
+++ b/2_pandas_str_bonus_challenges.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# [BONUS] Cars challenges"
+        "# Cars challenges"
       ],
       "metadata": {
         "id": "UzVthogbzKNs"
