--- a/4_advanced_transformations_pd.ipynb
+++ b/4_advanced_transformations_pd.ipynb
@@ -6,7 +6,7 @@
         "id": "TFZGKtnef_nZ"
       },
       "source": [
-        "# From SQL to pandas challenge 10"
+        "# From SQL to pandas challenge"
       ]
     },
     {
