--- a/5_bonus_challenges_pd.ipynb
+++ b/5_bonus_challenges_pd.ipynb
@@ -6,7 +6,7 @@
         "id": "sN57mBmegRcv"
       },
       "source": [
-        "# From SQL to pandas challenge 11"
+        "# Bonus SQL to pandas challenge"
       ]
     },
     {
