--- a/7_data_cleaning.ipynb
+++ b/7_data_cleaning.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMUQjEDVU/hH29yc3/Ca2iS",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNcQ30M7J4hXjDpbujG8YWI"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -6504,15 +6493,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tPk8I2fUlBvG"
-      },
-      "execution_count": 101,
-      "outputs": []
     }
   ]
 }
