--- a/7_data_cleaning.ipynb
+++ b/7_data_cleaning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYzQaXJAgTsbsMH/OfOeSx"
+      "authorship_tag": "ABX9TyO/in9H0V6takppcO+bxQmi"
     },
     "kernelspec": {
       "name": "python3",
@@ -1377,45 +1377,46 @@
     {
       "cell_type": "code",
       "source": [
-        "products_2sp[products_1sp.sku.str.slice(0,3) == \"REP\"].sort_values(by=\"desc\").sample(2)"
+        "products_2sp.loc[products_1sp.sku.str.slice(0,3) == \"REP\"].sort_values(by=\"desc\").sample(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 147
+          "height": 206
         },
         "id": "oBBCmpwG6-UO",
-        "outputId": "09456813-db3e-4841-ba8b-a38872982a38"
+        "outputId": "f9afe6dd-3d6f-40a7-dea2-7a97e9b16abd"
       },
-      "execution_count": 94,
+      "execution_count": 155,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-94-0d7eca000b8f>:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-            "  products_2sp[products_1sp.sku.str.slice(0,3) == \"REP\"].sort_values(by=\"desc\").sample(2)\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "           sku                            name  \\\n",
-              "19317  REP0403          iPad LCD screen repair   \n",
               "15443  REP0322  Speaker iPhone 6s lower repair   \n",
+              "15434  REP0286    Home button repair iPhone 5c   \n",
+              "15358  REP0267    iPhone 4s GSM antenna repair   \n",
+              "2396   REP0243      Microphone Repair iPhone 6   \n",
+              "15343  REP0276   iPhone 5S Front Camera Repair   \n",
               "\n",
-              "                                                         desc   price  \\\n",
-              "19317       Repair service including parts and labor for iPad  159.99   \n",
-              "15443  Repair service including parts and labor for iPhone 6s   59.99   \n",
+              "                                                         desc    price  \\\n",
+              "15443  Repair service including parts and labor for iPhone 6s    59.99   \n",
+              "15434  Repair service including parts and labor for iPhone 5c  599.906   \n",
+              "15358  Repair service including parts and labor for iPhone 4s  399.905   \n",
+              "2396    Repair service including parts and labor for iPhone 6  699.017   \n",
+              "15343  Repair service including parts and labor for iPhone 5s  599.906   \n",
               "\n",
-              "      promo_price  in_stock      type  cl_price  cl_promo_price  \n",
-              "19317   1.599.898         0  1,44E+11    159.99           16.00  \n",
-              "15443       59.99         0  1,44E+11     59.99           59.99  "
+              "      promo_price  in_stock      type  cl_price  cl_promo_price brands  \n",
+              "15443       59.99         0  1,44E+11     59.99           59.99    REP  \n",
+              "15434     599.906         0  1,44E+11    599.91          599.91    REP  \n",
+              "15358     399.905         0  1,44E+11    399.90          399.90    REP  \n",
+              "2396      699.017         0  1,44E+11    699.02          699.02    REP  \n",
+              "15343     599.906         0  1,44E+11    599.91          599.91    REP  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8002fed7-884e-492d-9431-7a0f9e387756\">\n",
+              "  <div id=\"df-f6f44941-4b44-4aca-a87e-39ee5bbb8c04\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1444,21 +1445,10 @@
               "      <th>type</th>\n",
               "      <th>cl_price</th>\n",
               "      <th>cl_promo_price</th>\n",
+              "      <th>brands</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>19317</th>\n",
-              "      <td>REP0403</td>\n",
-              "      <td>iPad LCD screen repair</td>\n",
-              "      <td>Repair service including parts and labor for iPad</td>\n",
-              "      <td>159.99</td>\n",
-              "      <td>1.599.898</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1,44E+11</td>\n",
-              "      <td>159.99</td>\n",
-              "      <td>16.00</td>\n",
-              "    </tr>\n",
               "    <tr>\n",
               "      <th>15443</th>\n",
               "      <td>REP0322</td>\n",
@@ -1470,11 +1460,64 @@
               "      <td>1,44E+11</td>\n",
               "      <td>59.99</td>\n",
               "      <td>59.99</td>\n",
+              "      <td>REP</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15434</th>\n",
+              "      <td>REP0286</td>\n",
+              "      <td>Home button repair iPhone 5c</td>\n",
+              "      <td>Repair service including parts and labor for iPhone 5c</td>\n",
+              "      <td>599.906</td>\n",
+              "      <td>599.906</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1,44E+11</td>\n",
+              "      <td>599.91</td>\n",
+              "      <td>599.91</td>\n",
+              "      <td>REP</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15358</th>\n",
+              "      <td>REP0267</td>\n",
+              "      <td>iPhone 4s GSM antenna repair</td>\n",
+              "      <td>Repair service including parts and labor for iPhone 4s</td>\n",
+              "      <td>399.905</td>\n",
+              "      <td>399.905</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1,44E+11</td>\n",
+              "      <td>399.90</td>\n",
+              "      <td>399.90</td>\n",
+              "      <td>REP</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2396</th>\n",
+              "      <td>REP0243</td>\n",
+              "      <td>Microphone Repair iPhone 6</td>\n",
+              "      <td>Repair service including parts and labor for iPhone 6</td>\n",
+              "      <td>699.017</td>\n",
+              "      <td>699.017</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1,44E+11</td>\n",
+              "      <td>699.02</td>\n",
+              "      <td>699.02</td>\n",
+              "      <td>REP</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15343</th>\n",
+              "      <td>REP0276</td>\n",
+              "      <td>iPhone 5S Front Camera Repair</td>\n",
+              "      <td>Repair service including parts and labor for iPhone 5s</td>\n",
+              "      <td>599.906</td>\n",
+              "      <td>599.906</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1,44E+11</td>\n",
+              "      <td>599.91</td>\n",
+              "      <td>599.91</td>\n",
+              "      <td>REP</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8002fed7-884e-492d-9431-7a0f9e387756')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f6f44941-4b44-4aca-a87e-39ee5bbb8c04')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1525,12 +1568,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8002fed7-884e-492d-9431-7a0f9e387756 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f6f44941-4b44-4aca-a87e-39ee5bbb8c04 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8002fed7-884e-492d-9431-7a0f9e387756');\n",
+              "          const element = document.querySelector('#df-f6f44941-4b44-4aca-a87e-39ee5bbb8c04');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1553,7 +1596,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 155
         }
       ]
     },
