--- a/7_data_cleaning.ipynb
+++ b/7_data_cleaning.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Data Cleaning**\n"
+        "#Data Cleaning\n"
       ],
       "metadata": {
         "id": "jYpHLAcA23KA"
