--- a/3_category_creation_challenge.ipynb
+++ b/3_category_creation_challenge.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Load the Data"
+        "## Load Data"
       ],
       "metadata": {
         "id": "IWwFO6mzlaI9"
